[package]
name = "rust-libibverbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-sys = { git = "https://github.com/datenlord/rdma-sys" }
libc = "0.2.104"
errno = "0.2.7"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.14.0", features = ["full"] }
stream-channel = "0.1.0"
