[package]
name = "async-rdma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdma-sys = { git = "https://github.com/datenlord/rdma-sys" }
libc = "0.2.104"
errno = "0.2.7"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.14.0", features = ["full"] }
stream-channel = { path = "../stream-channel" }
multiplex-stream = { path = "../multiplex-stream" }
async-bincode = "0.6.1"
futures = "0.3.18"
lockfree-cuckoohash = {git = "https://github.com/GTwhy/lockfree-cuckoohash"}
rand = "0.8"
